TM-5122 Fixed asset list headers overflowing to the right in internet explorer
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@7293 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/elements/support/jqgrid.sass
+++ b/web-app/css/elements/support/jqgrid.sass
@@ -12,6 +12,7 @@ div.content-wrapper
       -moz-border-radius: 0px
       border-radius: 0px
     div.ui-jqgrid-view
+      overflow-x: hidden
       span
         input
           color: $black
